fix overflow-x code

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -23,8 +23,10 @@
   }
 
   body {
-    background-color: light-dark(rgb(var(--light-mode-background)),
-        rgb(var(--dark-mode-background)));
+    background-color: light-dark(
+      rgb(var(--light-mode-background)),
+      rgb(var(--dark-mode-background))
+    );
   }
 
   table {
@@ -33,22 +35,28 @@
 
   table thead th,
   table tfoot th {
-    background-color: light-dark(rgb(var(--dark-mode-foreground-muted)),
-        rgb(var(--light-mode-foreground-muted)));
+    background-color: light-dark(
+      rgb(var(--dark-mode-foreground-muted)),
+      rgb(var(--light-mode-foreground-muted))
+    );
   }
 
   table th,
   table td {
     border: 1px solid;
-    border-color: light-dark(rgb(var(--light-mode-foreground-muted)),
-        rgb(var(--dark-mode-foreground-muted)));
+    border-color: light-dark(
+      rgb(var(--light-mode-foreground-muted)),
+      rgb(var(--dark-mode-foreground-muted))
+    );
     padding: 2px 7px !important;
   }
 
   .prose blockquote {
     border-inline-start: solid 0.2rem;
-    border-inline-start-color: light-dark(rgb(var(--light-mode-foreground-muted)),
-        rgb(var(--dark-mode-foreground-muted)));
+    border-inline-start-color: light-dark(
+      rgb(var(--light-mode-foreground-muted)),
+      rgb(var(--dark-mode-foreground-muted))
+    );
   }
 
   .border {
@@ -56,36 +64,40 @@
   }
 
   .animate {
-    @apply opacity-0 -translate-y-3;
+    @apply -translate-y-3 opacity-0;
     @apply transition-all duration-300 ease-out;
   }
 
   .animate.show {
-    @apply opacity-100 translate-y-0;
+    @apply translate-y-0 opacity-100;
   }
 
   html #back-to-top {
-    @apply opacity-0 pointer-events-none;
+    @apply pointer-events-none opacity-0;
   }
 
   html.scrolled #back-to-top {
-    @apply opacity-100 pointer-events-auto;
+    @apply pointer-events-auto opacity-100;
   }
 
   a {
     color: inherit;
   }
 
+  code {
+    @apply break-words;
+  }
+
   /* copy code button on codeblocks */
   .copy-code {
-    @apply absolute right-2 top-2 grid size-8 place-content-center rounded border border-black/15 bg-neutral-100 text-center duration-300 ease-in-out dark:border-white/20 dark:bg-neutral-900 cursor-pointer;
+    @apply absolute right-2 top-2 grid size-8 cursor-pointer place-content-center rounded border border-black/15 bg-neutral-100 text-center duration-300 ease-in-out dark:border-white/20 dark:bg-neutral-900;
   }
 
   .copy-code:hover {
-    @apply bg-[#E9E9E9] dark:bg-[#232323] transition-colors;
+    @apply bg-[#E9E9E9] transition-colors dark:bg-[#232323];
   }
 
   .copy-code:active {
-    @apply transition-transform scale-90;
+    @apply scale-90 transition-transform;
   }
 }
